# Tritium-Engine

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  editor  runtime  vcpkg.json
docs/: contributions.md  domain_specific_language.md
docs/contributions/: code_formatting_guidelines.md
include/Engine/: engine.h
include/Engine/logging/: log_pipe.h  logger.h
include/Engine/render_backends/: render_backend.h
include/Engine/render_backends/compatibility/: compatibility_render_backend.h
include/Engine/render_backends/progressive/: constants.h  extensions.h  graphics_pipeline.h  progressive_render_backend.h  swap_chain.h  virtual_device.h
include/Engine/render_backends/progressive/graphics_pipeline/: graphics_pipeline.h
include/Engine/state/: application_config.h
include/Engine/thread_pool/: chase_lev_deque.h  thread_pool.h
include/render_backends/compatibility/: core.h
include/render_backends/progressive/: core.h
src/Engine/: engine.cpp
src/Engine/thread_pool/: thread_pool.cpp
src/logging/: log_pipe.cpp  logger.cpp
src/render_backends/: render_backend.cpp
src/render_backends/compatibility/: compatibility_render_backend.cpp  core.cpp
src/render_backends/progressive/: core.cpp  extensions.cpp  graphics_pipeline.cpp  progressive_render_backend.cpp  swap_chain.cpp  virtual_device.cpp
src/render_backends/progressive/graphics_pipeline/: graphics_pipeline.cpp
src/runtime/: main.cpp
src/state/: application_config.cpp
